--- a/css/main.css
+++ b/css/main.css
@@ -74,5 +74,44 @@ ul {
     background-color: var(--dark-blue);
 }
 
+body {
+    font-family: var(--fm-barlow);
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 500;
+}
+
+.container {
+    max-width: 1158px;
+    width: 100%;
+    padding-left: 24px;
+    padding-right: 24px;
+    margin: auto;
+}
+
+
+.d-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* SITE-HEADER */
+.site-header {
+    padding-top: 55px;
+    padding-bottom: 55px;
+}
+.logo {
+    display: block;
+}
+
+.logo-image {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+}
+
+/* SITE-HEADER */
+
 
 
