--- a/css/main.css
+++ b/css/main.css
@@ -159,5 +159,85 @@ body {
 }
 /* SITE-HERO */
 
+/* ABOUT-SECTION */
+.about {
+    padding-bottom: 30px;
+}
+.about-content {
+    display: flex;
+}
+.about-picture {
+    display: flex;
+    column-gap: 30px;
+}
+.about-glass {
+    max-width: 445px;
+    width: 100%;
+    height: 480px;
+    border-radius: 15px;
+    overflow: hidden;
+}
+.about-glass__picture {
+    width: 100%;
+}
+.about-glass__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.about-phone {
+    max-width: 255px;
+    width: 100%;
+    height: 480px;
+    border-radius: 15px;
+    overflow: hidden;
+    position: relative;
+}
+.about-phone__image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.about-phone__content {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 0, 0, 0.661);
+    z-index: 99;
+    position: absolute;
+    top: 0;
+}
+.about-desc {
+    max-width: 395px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 27px;
+
+}
+
+.about-desc__title {
+    max-width: 255px;
+    width: 100%;
+    color: var(--dark-blue);
+    font-size: 32px;
+    text-transform: uppercase;
+    line-height: 36px; 
+    font-weight: 900;
+}
+
+.about-desc__text {
+    max-width: 257px;
+    width: 100%;
+    color: var(--light-blue);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 26px;
+}
+/* ABOUT-SECTION */
+
 
 
